# OpenCL-template-cpp

./: CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: hello.cl  hello.cpp  hello.hpp  vecAdd.cl  vecAdd.cpp  vecAdd.hpp
